tests/snapshots/integration__integration_tests__merge__merge_pre_merge_command_no_hooks.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
    - "--no-hooks"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpD1BMpv/test-config.toml
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
[1m[31merror:[0m unexpected argument '[1m[33m--no-hooks[0m' found

  [1m[32mtip:[0m to pass '[1m[33m--no-hooks[0m' as a value, use '[1m[32m-- --no-hooks[0m'

[1m[32mUsage:[0m [1m[36mwt merge[0m [36m<TARGET>[0m

For more information, try '[1m[36m--help[0m'.
